# GPReg

./: .gitignore  DOCUMENTATION.md  README.md  app.py  pyproject.toml  requirements.txt
examples/: demo.ipynb
gpreg/: __init__.py
gpreg/diagnostics/: __init__.py  metrics.py  plots.py
gpreg/kernels/: __init__.py  base.py  standard.py
gpreg/models/: __init__.py  exact.py  multioutput.py  sparse.py  torch_backend.py
gpreg/preprocessing/: __init__.py  categorical.py  pca.py  pipeline.py  scaler.py
gpreg/utils/: __init__.py  exceptions.py  io.py  linalg.py
