[project]
name = "gpreg"
version = "0.2.0"
description = "Gaussian Process Regression in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["gaussian-process", "regression", "machine-learning", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.3"]
torch = ["torch>=2.0"]
app = ["streamlit>=1.28"]
all = [
    "scikit-learn>=1.3",
    "torch>=2.0",
    "streamlit>=1.28",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gpreg*"]
exclude = ["examples*", "tests*"]
